--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "next dev"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Jefferson Ferreira",
+  "license": "MIT",
   "dependencies": {
     "next": "^13.1.6",
     "react": "^18.2.0",
