--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "lint:fix": "prettier --write .",
+    "lint:check": "prettier --check ."
   },
   "keywords": [],
   "author": "Jefferson Ferreira",
@@ -13,5 +15,8 @@
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.4"
   }
 }
